대충 구조 + Custom Log 추가

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=933AC6944BE1FA6F7D6D2DAA0540C91A
+CopyrightNotice=Copyright © Team DDS 2025. Project DDS™ is a trademark of Team DDS. All Rights Reserved.
 
 [StartupActions]
 bAddPacks=True
@@ -8,3 +9,4 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
