--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,3 +90,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/DDS.IngamePlayerController",NewName="/Script/DDS.InGamePlayerController")
