캐릭터 인풋 기본설정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,3 +93,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/DDS.IngamePlayerController",NewName="/Script/DDS.InGamePlayerController")
++StructRedirects=(OldName="/Script/DDS.Parent",NewName="/Script/DDS.Parent")
